--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ xcuserdata
 *.moved-aside
 *.xcuserstate
 *.xcscmblueprint
-xcuserdata/*
+Bugger.xcodeproj/xcuserdata/*
 
 ## Obj-C/Swift specific
 *.hmap
