--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 osx_image: xcode9
 language: objective-c
-env:
-  - COMMAND="-project Bugger.xcodeproj -scheme BuggerExample build test"
-  - COMMAND="-project Bugger.xcodeproj -scheme Bugger test"
-script: "xctool $COMMAND"
+xcode_project: MyNewProject.xcodeproj
+xcode_scheme:
+  - Bugger
+  - BuggerExample
