--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,3 +21,10 @@ jobs:
       - uses: actions/checkout@v3
       - name: xcodebuild
         run: xcodebuild -scheme ${{ matrix.target }} -destination "name=iPhone 14 Pro" | xcpretty && exit ${PIPESTATUS[0]}
+  check-resolved-packages-match: 
+    env: 
+      swiftpm: Package.resolved
+      xcode: xcode-project/Bugger.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/Package.resolved
+    steps:
+      - name: check
+        run: cmp --silent $swiftpm $xcode || diff $swiftpm $xcode & echo "exit 1
