--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,10 +23,7 @@ jobs:
         run: xcodebuild -scheme ${{ matrix.target }} -destination "name=iPhone 14 Pro" | xcpretty && exit ${PIPESTATUS[0]}
   check-resolved-packages-match: 
     runs-on: ubuntu-latest
-    env:
-      swiftpm: Package.resolved
-      xcode: xcode-project/Bugger.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/Package.resolved
     steps:
       - uses: actions/checkout@v3
       - name: check
-        run: cmp --silent $swiftpm $xcode || diff $swiftpm $xcode & exit 1
+        run: ./scripts/check-resolved-packages-match.sh
