--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,6 @@ jobs:
       matrix:
         target:
           - Bugger
-          - BuggerLinear
           - BuggerGitHub
           - BuggerImgurStore
           - HelpfulUI
@@ -21,6 +20,16 @@ jobs:
       - uses: actions/checkout@v3
       - name: xcodebuild
         run: xcodebuild -scheme ${{ matrix.target }} -destination "name=iPhone 14 Pro" | xcpretty && exit ${PIPESTATUS[0]}
+  build-bugger-linear:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: resolve swift deps
+        run: swift package resolve
+      - name: generate graphql code
+        run: swift run --package-path .build/checkouts/apollo-ios/ apollo-ios-cli generate -p Sources/BuggerLinear/apollo-codegen-config.json
+      - name: xcodebuild
+        run: xcodebuild -scheme BuggerLinear -destination "name=iPhone 14 Pro" | xcpretty && exit ${PIPESTATUS[0]}
   check-resolved-packages-match: 
     runs-on: ubuntu-latest
     steps:
