--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,4 +13,4 @@ jobs:
       - uses: actions/checkout@v3
       - name: xcodebuild (Bugger)
         working-directory: BuggerNext
-        run: xcodebuild -scheme Bugger -destination "name=Any iOS Device" | xcpretty && exit ${PIPESTATUS[0]}
+        run: xcodebuild -scheme Bugger -destination "generic/platform=iOS Simulator"
