UI for demo app

--- a/BuggerNext/demo/Demo.xcodeproj/xcshareddata/xcschemes/demo.xcscheme
+++ b/BuggerNext/demo/Demo.xcodeproj/xcshareddata/xcschemes/demo.xcscheme
@@ -18,7 +18,7 @@
                BlueprintIdentifier = "3E3F47692F43C804007CEC86"
                BuildableName = "Demo.app"
                BlueprintName = "Demo"
-               ReferencedContainer = "container:demo.xcodeproj">
+               ReferencedContainer = "container:Demo.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -47,7 +47,7 @@
             BlueprintIdentifier = "3E3F47692F43C804007CEC86"
             BuildableName = "Demo.app"
             BlueprintName = "Demo"
-            ReferencedContainer = "container:demo.xcodeproj">
+            ReferencedContainer = "container:Demo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -64,7 +64,7 @@
             BlueprintIdentifier = "3E3F47692F43C804007CEC86"
             BuildableName = "Demo.app"
             BlueprintName = "Demo"
-            ReferencedContainer = "container:demo.xcodeproj">
+            ReferencedContainer = "container:Demo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
